Links on mobile version size fix

--- a/src/styles/media/mobile.scss
+++ b/src/styles/media/mobile.scss
@@ -59,11 +59,8 @@
     width: auto;
     margin-bottom: 1.4rem;
   }
-  blockquote, ol, p, ul {
+  blockquote, ol, p, ul, a {
     font-size: 1.5rem;
-  }
-  a {
-    font-size: 1.83rem;
   }
   pre {
     width: calc(100vw - 7rem);
